Implement assessment (#316)
* Implement Assessment #292.

* Included the javadoc.

* Included the javadoc.

* Removal of unused method.

* Test implementation.

* Update BCIActivity #315

* Fix cyclic dependency bug with JSON and testes updates.

* Implementation of Assessment and Skill integration.

* Implementation of Assessment and Skill integration.